1.5.0 - 2015/12/19
 - Updated compiler/libraries/build system (primarily upgraded to SDL2)
 - Fixed game sound cutting out in Linux
 - Fixed game crashing in Linux
 - Attempted fix of game freezing on close
 - Removed profile system
 - Ported the game to Android
 - Added touch controller

1.4.0 - 2013/7/19
 - Updated compiler/libraries.
 - Ported the game to Linux and OS X!
 - Released the level editor for all 3 platforms.
 - Open-sourced both the game and level editor.
 - Added AI-controlled players for both multiplayer game modes.
 - Added several new special items that grant new capabilities.
 - The homing shot is now a special upgrade item that must be acquired.
 - Added some secret areas to acquire the new special items.
 - Added new stuff and areas to take advantage of the new special items.
 - Added New Game Plus to SP Adventure. Every time you beat the game (beat all bosses and then Lighthouse), it gets harder and candy is worth more points.
 - Added unlockable "toys" that can be purchased for candy.
 - Difficulty was rebalanced, and now affects more things.
 - The effect of difficulty on NPC counts was redone.
 - Stunned NPCs now fade out after a while in both game modes. Can be turned off.
 - Can no longer have MP players in SP modes.
 - Friendly NPCs no longer die when the level ends.
 - Sally now follows the player.
 - You can no longer jump when Looking with a J-Balloon.
 - Players should no longer ever get stuck in the ground at the bottom of slopes.
 - You can no longer uncrouch when a solid tile is above you.
 - Increased the camera's maximum vertical speed.
 - NPC shots can no longer spawn inside solid tiles.
 - Lowered the homing range for the player's homing shot.
 - The player's homing shot now ignores targets that are friendly or behind solid tiles.
 - Changed the main font to be more readable.
 - Fixed the ammo box HUD icon looking weird.
 - Rebalanced score/candy amounts