@@ -6,6 +6,7 @@
  - Removed profile system
  - Ported the game to Android
  - Added touch controller
+ - Disabled periodic saving of data
 
 1.4.0 - 2013/7/19
  - Updated compiler/libraries.
